--- a/eShopSolution.AdminApp/Views/User/Delete.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Delete.cshtml
@@ -17,7 +17,7 @@
     <a class="btn btn-danger btn-style mt-4" asp-action="Index"><i class="fa fa-reply" aria-hidden="true"></i> Quay lại</a>
 </div>
 <hr />
-<h4 style="color:red;font-family:Arial;  font-style: italic;">Bạn có chắc chắn muốn xóa người này không ?</h4>
+<h4 style="color:red;font-family:Arial;  font-style: italic;">Bạn có chắc chắn muốn xóa tài khoản này không ?</h4>
 <!-- //breadcrumbs -->
 <!-- forms -->
 <section class="forms">
