--- a/eShopSolution.AdminApp/Views/User/Create.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!-- breadcrumbs -->
-<nav aria-label="breadcrumb" class="mb-4">
+<nav aria-label="breadcrumb" class="mb">
     <ol class="breadcrumb my-breadcrumb">
         <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Home">Trang chủ</a></li>
         <li class="breadcrumb-item active"><a asp-action="Index" asp-controller="User">Người sử dụng</a></li>
